# deepseek_rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: chat_completion.rs
src/: lib.rs
src/client/: client.rs  mod.rs
src/client/chat_completions/: chat_completions.rs  mod.rs  request.rs  response.rs
src/errors/: client_errors.rs  mod.rs  request_errors.rs
