[package]
name = "deepseek"
version = "0.1.0"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]

[lib]
path = "src/lib.rs"
[dependencies]
reqwest = { version = "0.12.9", features = [
    "json",
    "cookies",
    "rustls-tls",
    "multipart",
] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde = { version = "1.0.209", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.30"
chrono = { version = "0.4.35", features = ["serde", "clock"] }
tokio = { version = "1.39.3", features = ["full"] }
nanoid = "0.4.0"
csv = "1.3.0"
regex ="1"
dotenvy_macro = "0.15.7"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65.0"

anyhow = "1.0.94"
base64 = "0.22.1"
image = "0.25.5"
imageproc = "0.25.0" # Check for latest version
rexif = "0.5"
thiserror = "2.0.11"
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
    "migrate",
]
