[package]
name = "deepseek_rs"
version = "0.1.1"
edition = "2021"
authors = ["Chloe Pratas <chloevision97@gmail.com>"]
github = "https://github.com/Chloe199719/deepseek_rs"
license = "MIT"
description = "A Rust library for the DeepSeek API"

[lib]
path = "src/lib.rs"
[dependencies]
reqwest = { version = "0.12.9", features = [
    "json",
    "cookies",
    "rustls-tls",
    "multipart",
] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde = { version = "1.0.209", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.30"
chrono = { version = "0.4.35", features = ["serde", "clock"] }
tokio = { version = "1.39.3", features = ["full"] }
nanoid = "0.4.0"
regex ="1"
dotenvy_macro = "0.15.7"


anyhow = "1.0.94"
base64 = "0.22.1"
thiserror = "2.0.11"
